opam-version: "1.2"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: [
  "Petter A. Urkedal <paurkedal@gmail.com>"
  "Gabriel Radanne <drupyog@zoho.com>"
]
homepage: "https://github.com/paurkedal/ppx_regexp"
bug-reports: "https://github.com/paurkedal/ppx_regexp/issues"
dev-repo: "https://github.com/paurkedal/ppx_regexp.git"
license: "LGPL-3 with OCaml linking exception"
build: ["jbuilder" "build" "--root" "." "-j" jobs "@install"]
depends: [
  "dune" {build}
  "ocaml-migrate-parsetree"
  "re" {>= "1.7.1"}
  "ppx_tools_versioned"
  "tyre"
  "qcheck" {test}
]
available: [ocaml-version >= "4.02.3"]
