opam-version: "2.0"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: [
  "Gabriel Radanne <drupyog@zoho.com>"
  "Petter A. Urkedal <paurkedal@gmail.com>"
]
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ppx_regexp"
bug-reports: "https://github.com/paurkedal/ppx_regexp/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
  "ocaml-migrate-parsetree"
  "re" {>= "1.7.1"}
  "ppx_tools_versioned"
  "tyre" {>= "0.4.1"}
  "qcheck" {with-test}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/ppx_regexp.git"
