(library
  (name ppx_regexp)
  (public_name ppx_regexp)
  (kind ppx_rewriter)
  (modules ppx_regexp regexp)
  (preprocess (pps ppxlib.metaquot))
  (libraries ppxlib re re.perl)
  (ppx_runtime_libraries re re.perl))

(rule (copy ../common/regexp.mli regexp.mli))
(rule (copy ../common/regexp.ml regexp.ml))
