; Tests run for both packages

(test
  (name test_regexp)
  (modules regexp test_regexp)
  (libraries ppxlib qcheck re re.perl))
(rule (copy ../common/regexp.mli regexp.mli))
(rule (copy ../common/regexp.ml regexp.ml))

; Tests for ppx_regexp

(tests
  (names test_ppx_regexp test_ppx_regexp_unused)
  (modules test_ppx_regexp test_ppx_regexp_unused)
  (package ppx_regexp)
  (libraries re re.perl)
  (preprocess (pps ppx_regexp)))

; Tests for ppx_tyre

(executable
  (name test_ppx_tyre)
  (modules test_ppx_tyre)
  (libraries re re.perl)
  (preprocess (pps ppx_tyre)))
(alias
  (name runtest)
  (package ppx_tyre)
  (deps test_ppx_tyre.exe)
  (action (run %{deps})))

; Combined preprocessor

(executable
  (name main)
  (modules Main)
  (libraries ppx_regexp ppx_tyre ocaml-migrate-parsetree))
